# rust-text-converter

./: Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml
src/: main.rs
static/: index.html  main.css
