[package]
name = "rust-text-converter"
version = "0.2.4"
edition = "2021"
license = "MIT"

[[bin]]
name = "rust-text-converter"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case =  {version = "0.6.0", features = ["random"]}
emojis = "0.5.2"
rocket = {version = "0.5.0-rc.2", features = ["tls"]}
gh-emoji = "1.0.7"
unicode-segmentation = "1.10.0"
